--- a/DDAYGO/ViewController/My/Setting/SetHomePage/Base.lproj/SettingViewController.xib
+++ b/DDAYGO/ViewController/My/Setting/SetHomePage/Base.lproj/SettingViewController.xib
@@ -30,8 +30,8 @@
                 <outlet property="view1" destination="j59-5c-d7A" id="FyV-hq-Gdb"/>
                 <outlet property="view3" destination="3LT-aI-Ujf" id="bIk-nn-20g"/>
                 <outlet property="view3Layout" destination="9Cc-c5-D7w" id="AZy-xu-vrA"/>
-                <outlet property="view4" destination="ZaC-1x-txx" id="fXP-Ht-0Sn"/>
-                <outlet property="view4Layout" destination="PkJ-oQ-VXS" id="QJu-ip-KqJ"/>
+                <outlet property="xgLayout" destination="J73-FE-0bv" id="MaL-zK-fCu"/>
+                <outlet property="xgview" destination="ZaC-1x-txx" id="J9I-RQ-geS"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -448,7 +448,7 @@
                                         <constraint firstItem="NyZ-Lj-fcO" firstAttribute="top" secondItem="ZaC-1x-txx" secondAttribute="top" id="0UX-Be-fHh"/>
                                         <constraint firstItem="NyZ-Lj-fcO" firstAttribute="leading" secondItem="ZaC-1x-txx" secondAttribute="leading" id="54s-NQ-M5L"/>
                                         <constraint firstItem="NyZ-Lj-fcO" firstAttribute="leading" secondItem="ZaC-1x-txx" secondAttribute="leading" id="BQH-5M-PSK"/>
-                                        <constraint firstAttribute="height" constant="49" id="PkJ-oQ-VXS"/>
+                                        <constraint firstAttribute="height" constant="49" id="J73-FE-0bv"/>
                                         <constraint firstAttribute="bottom" secondItem="NyZ-Lj-fcO" secondAttribute="bottom" id="Txg-JN-NcI"/>
                                         <constraint firstAttribute="bottom" secondItem="NyZ-Lj-fcO" secondAttribute="bottom" id="WmU-um-GcC"/>
                                         <constraint firstAttribute="trailing" secondItem="NyZ-Lj-fcO" secondAttribute="trailing" id="bUK-Vw-lQt"/>
