--- a/DDAYGO/ViewController/My/StoreManagement/ZP_YueTixian/ZP_ExtractHomePage/ZP_ExtractCell/ZP_ExtractCell.xib
+++ b/DDAYGO/ViewController/My/StoreManagement/ZP_YueTixian/ZP_ExtractHomePage/ZP_ExtractCell/ZP_ExtractCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -23,10 +23,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="40"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2017-12-02 13:38" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QBh-Ne-RCi">
-                                <rect key="frame" x="100" y="10" width="116" height="20"/>
+                                <rect key="frame" x="102" y="10" width="116" height="20"/>
                                 <color key="backgroundColor" red="0.74509803921568629" green="0.74509803921568629" blue="0.74509803921568629" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="20" id="elS-4w-ZLN"/>
+                                    <constraint firstAttribute="height" constant="20" id="vQC-4U-GSZ"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -36,9 +36,8 @@
                         <color key="backgroundColor" red="0.93333333333333335" green="0.93333333333333335" blue="0.93333333333333335" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="40" id="VJX-sP-bpe"/>
-                            <constraint firstItem="QBh-Ne-RCi" firstAttribute="centerY" secondItem="1Pl-wK-eG4" secondAttribute="centerY" id="adc-Lu-JtJ"/>
-                            <constraint firstItem="QBh-Ne-RCi" firstAttribute="top" secondItem="1Pl-wK-eG4" secondAttribute="top" constant="10" id="mtD-eM-cJg"/>
-                            <constraint firstItem="QBh-Ne-RCi" firstAttribute="leading" secondItem="1Pl-wK-eG4" secondAttribute="leading" constant="100" id="s2m-Ry-1fI"/>
+                            <constraint firstItem="QBh-Ne-RCi" firstAttribute="centerX" secondItem="1Pl-wK-eG4" secondAttribute="centerX" id="p9f-Hg-3mL"/>
+                            <constraint firstItem="QBh-Ne-RCi" firstAttribute="top" secondItem="1Pl-wK-eG4" secondAttribute="top" constant="10" id="rIr-0t-CB0"/>
                         </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="q4R-Lw-vZm">
